--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -36,7 +37,7 @@
     </header> -->
     <div>
       <div class="relative px-4 pt-6 sm:px-6 lg:px-8">
-        <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
+        <nav class="relative flex items-center justify-between sm:h-10 lg:justify-center" aria-label="Global">
           <div class="flex flex-shrink-0 flex-grow items-center lg:flex-grow-0">
             <div class="flex w-full items-right justify-between md:w-auto">
               <a href="/profile">
@@ -55,11 +56,11 @@
             </div>
           </div>
           <div class="hidden md:ml-10 md:block md:space-x-8 md:pr-4">
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Profile</a>
+            <a href="/profile" class="font-medium text-gray-500 hover:text-gray-900">Profile</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Feed</a>
+            <a href="/feed" class="font-medium text-gray-500 hover:text-gray-900">Feed</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">sign out</a>
+            <a href="/logout" class="font-medium text-gray-500 hover:text-gray-900">sign out</a>
 
             <a href="/login" class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
           </div>
@@ -80,7 +81,7 @@
         <div class="overflow-hidden rounded-lg bg-white shadow-md ring-1 ring-black ring-opacity-5">
           <div class="flex items-center justify-between px-5 pt-4">
             <div>
-              <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+              <img class="h-8 w-auto" src="https://www.logomaker.com/api/main/images/1j+ojVVCOMkX9Wyrexe4hGfp27Ly0mVZxBzAvmEuKCsYq1YxwXw21LA+pKYgfkhDpQhV0lBWLZgr1H0vXIkVhR1l+jeIOp0GBSc...i38JVu8BGHggcR3XG+jN8BVkgu1ox9BG4A==" alt="">
             </div>
             <div class="-mr-2">
               <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
