--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
-<div class="container">
+<div class="container m-auto">
   <div class="row mt-5">
-      <div class="col-6">
+      <div class="col-4">
           <div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
@@ -22,22 +22,33 @@
                 <label for="imgUpload" class="form-label">Image</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+              <button type="submit" class="btn btn-primary bg-blue-500" value="Upload">Submit</button>
             </form>
           </div>
       </div>
-      <div class="col-6">
-        <ul class="row list-unstyled">
+      <div class="col-8">
         <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
-          </li>
+        <div class="card lg:card-side shadow-xl">
+          <figure>
+            <img class="img-fluid w-80 h-60 p-2 rounded-xl m-auto" src="<%= posts[i].image%>">
+          </figure>
+          <div class="row card-body">
+            <h2 class="card-title"><%= posts[i].title%></h2>
+            <p><%= posts[i].caption%></p>
+            <div class="card-actions justify-end">
+              <a href="/post/<%= posts[i]._id%>">
+                  <button class="btn btn-primary">see listing</button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <br> 
         <% } %>
-        </ul>
-        <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
+        <br> 
+
+        
+        <div class="row justify-content-center mt-5 mb-3">
+          <a class="btn btn-primary" href="/feed">See Other Kennel listings</a>
         </div>  
       </div>  
     </div>
