--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') -%>
-<div class="container">
+<div class="container h-auto">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
       <h2><%= post.title %></h2>
@@ -27,34 +27,6 @@
     <div class="col-3 mt-5">
       <p><%= post.caption %></p>
     </div>
-
-    <div class="mt-5">
-      <h2>Add a Comment</h2>
-      <form action="/comment/createComment/<%=post._id %>" method="POST">
-        <div class="mb-3">
-            <label for="title" class="form-label">Comment</label>
-            <input type="text" class="form-control" id="comment" name="comment">
-        </div>
-        <button type="submit" class="btn btn-primary" >Add Comment</button>
-      </form>
-    </div>
-
-    <ul>
-      <% for (var i=0; i<comments.length; i++) {%>
-        <li class="col-6 justify-content-between mt-5">
-          <%= comments[i].commentBy %> commented: <%= comments[i].comment %> 
-          <%if(comments[i].commentById == user.id){ %>
-          <form
-          action="/comment/deleteComment/<%=post._id %>/<%=comments[i]._id%>?_method=DELETE"
-          method="POST"
-          >
-          <button class="btn btn-outline-danger" type="submit">DELETE</button>
-        </form>
-        <%}%>
-        </li>
-        
-      <% } %>
-    </ul>
 
     <div class="col-6 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
