--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/insideHeader') -%>
 <div class="container h-auto">
   <div class="row justify-content-center mt-5">
     <div class="col-5">
