--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,11 @@
-<%- include('partials/header') -%>
+<%- include('partials/insideHeader') -%>
 <div class="container m-auto">
   <div class="row mt-5">
       <div class="col-4">
           <div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
+              <br>
               <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
           <div class="mt-5">
             <h2>Register Your Kennel Here</h2>
