--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/insideHeader') -%>
-<div class="container h-auto">
+<div class="container pb-4">
   <div class="row justify-content-center mt-5">
     <div class="col-5">
       <h2>Name of Kennel: <%= post.kennel %></h2>
@@ -39,7 +39,7 @@
 
     <div class="col-8 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+      <a class="btn btn-primary" href="/feed">Go to Feed</a>
     </div>
   </div>
 </div>
