--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container overflow-auto mb-3">
   <div class="row justify-content-center">
     <section class="col-6 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
