--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <main class="container overflow-auto mb-3">
   <div class="row justify-content-center">
-    <section class="col-6 mt-5">
+    <section class="col-7 row-10 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
