booking functionality added

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/insideHeader') -%>
-  <div class="container ml-3">
+  <div class="container ml-10">
     <h3 class="text-2xl text-gray-700 font-bold mb-6 -ml-3">Latest Posts</h3>
 
     <ol class="border-l-2 border-purple-600">
@@ -11,7 +11,7 @@
                 <path fill="currentColor" d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm64-192c0-8.8 7.2-16 16-16h288c8.8 0 16 7.2 16 16v64c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-64zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"></path>
               </svg>
             </div>
-            <div class="block p-6 rounded-lg shadow-lg bg-gray-100 col-6 ml-6 mb-10">
+            <div class="block p-6 rounded-lg shadow-lg bg-purple-100 col-8 ml-6 mb-10">
               <div class="flex justify-between mb-4">
                 <a href="#!" class="font-medium text-purple-600 hover:text-purple-700 focus:text-purple-800 duration-300 transition ease-in-out text-sm"><%= posts[i].kennel %></a>
                 <br>
@@ -22,7 +22,6 @@
               <a href="/post/<%= posts[i]._id%>">
                   <button type="button" class="inline-block px-4 py-1.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out" data-mdb-ripple="true">See full Post</button>
               </a>
-              <!-- <button type="button" class="inline-block px-3.5 py-1 border-2 border-purple-600 text-purple-600 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out" data-mdb-ripple="true">Got to profile</button> -->
             </div>
           </div>
         </li>
