--- a/views/partials/insideHeader.ejs
+++ b/views/partials/insideHeader.ejs
@@ -76,6 +76,9 @@
             <li class="nav-item">
               <a class="nav-link block pr-2 lg:px-2 py-2 text-gray-600 hover:text-gray-700 focus:text-gray-700 transition duration-150 ease-in-out" href="/feed" data-mdb-ripple="true" data-mdb-ripple-color="light">Feed</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link block pr-2 lg:px-2 py-2 text-gray-600 hover:text-gray-700 focus:text-gray-700 transition duration-150 ease-in-out" href="/booking" data-mdb-ripple="true" data-mdb-ripple-color="light">Bookings</a>
+            </li>
           </ul>
         </div>
         <div class="flex items-center lg:ml-auto">
