--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,12 +1,14 @@
 <%- include('partials/insideHeader') -%>
 <div class="container pb-4">
   <div class="row justify-content-center mt-5">
-    <div class="col-5">
-      <h2>Name of Kennel: <%= post.kennel %></h2>
-      <br>
-      <img class="img-fluid" src="<%= post.image%>" />
-      <br>
-      <div class="row justify-content-between">
+    <div class="row col-5">
+      <div class="">
+        <h2>Name of Kennel: <%= post.kennel %></h2>
+        <h2 class="col-2">Liked By: <%= post.likes %></h2>
+        <br>
+        <img class="img-fluid" src="<%= post.image%>" />
+        <br>
+        <div class="row justify-content-around">
         <form
           class="col-1"
           action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -14,16 +16,17 @@
         >
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
         </form>
-        <h2 class="col-2">Likes: <%= post.likes %></h2>
+        
         <%if(post.user == user.id){ %>
         <form
           action="/post/deletePost/<%= post.id %>?_method=DELETE"
           method="POST"
-          class="col-3"
+          class="col-1"
         >
           <button class="btn btn-primary fa fa-trash" type="submit"></button>
         </form>
         <%}%>
+      </div>
       </div>
     </div>
     <div class="col-5 mt-5">
@@ -35,7 +38,75 @@
       <span> <%= post.kennel %> contact information</span>
       <p>Contact: <%= post.contact %></p>
       <p>Email: <%= post.KennelEmail %></p>
+      <div class="mt-5">
+        <button class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button" data-modal-toggle="default-modal">
+      New Booking
+      </button>
     </div>
+    
+    </div>
+    
+    <div>
+  <div id="default-modal" data-modal-show="false" aria-hidden="true" class="hidden overflow-x-hidden overflow-y-auto fixed h-modal md:h-full top-4 left-0 right-0 md:inset-0 z-50 justify-center items-center">
+      <div class="relative w-full max-w-2xl px-4 h-full md:h-auto">
+          <!-- Modal content -->
+          <div class="bg-white rounded-lg shadow relative dark:bg-gray-700">
+              <!-- Modal header -->
+              <div class="flex items-start justify-between p-5 border-b rounded-t dark:border-gray-600">
+                  <h3 class="text-gray-900 text-xl lg:text-2xl font-semibold dark:text-white">
+                      Create New Booking with <%= post.kennel %>
+                  </h3>
+                  <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="default-modal">
+                      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>  
+                  </button>
+              </div>
+              <!-- Modal body -->
+              <div class="p-4">
+                <div class="mt-2">
+                  <form action="/booking/createBooking/<%=post._id %>" method="POST">
+                    <div class="mb-3">
+                      <label for="pet" class="form-label">type of pet expected</label>
+                      <input type="text" class="form-control" id="pet" name="pet">
+                    </div>
+                    <div class="mb-3">
+                      <label for="petNumber" class="form-label">Number of Pets</label>
+                      <input type="number" class="form-control" id="petNumber" name="petNumber">
+                    </div>
+                    <div class="mb-3">
+                      <label for="comment" class="form-label">Any additional information on the pet</label>
+                      <textarea class="form-control" id="comment" name="comment"></textarea>
+                    </div>
+                    <div class="row">
+                      <div class="col-6 mb-3">
+                        <label for="BookingFrom" class="form-label">Book kennel from</label>
+                        <input type="date" class="form-control" id="BookingFrom" name="BookingFrom">
+                      </div>
+                      <div class="col-6 mb-3">
+                        <label for="BookingTill" class="form-label">Book kennel to</label>
+                        <input type="date" class="form-control" id="BookingTill" name="BookingTill">
+                      </div>
+                    </div>
+                    
+                    
+                    <!-- Modal footer -->
+              <div class="flex space-x-2 items-center p-6 border-t border-gray-200 rounded-b dark:border-gray-600">
+                <button data-modal-toggle="default-modal" type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Confirm</button>
+                <button data-modal-toggle="default-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600">Cancel</button>
+            </div>
+                    <!-- <button type="submit" class="btn btn-primary" >Add Bookings</button> -->
+                  </form>
+                    </div>
+              </div>
+              
+          </div>
+      </div>
+  </div>
+
+
+
+
+    </div>
+    
 
     <div class="col-8 mt-5">
       <a class="btn btn-primary" href="/profile">Return to Profile</a>
