--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -15,7 +15,7 @@
               <div class="flex justify-between mb-4">
                 <a href="#!" class="font-medium text-purple-600 hover:text-purple-700 focus:text-purple-800 duration-300 transition ease-in-out text-sm"><%= posts[i].kennel %></a>
                 <br>
-                <a href="#!" class="font-medium text-purple-600 hover:text-purple-700 focus:text-purple-800 duration-300 transition ease-in-out text-sm"><%= posts[i].createdAt %></a>
+                <a href="#!" class="font-medium text-purple-600 hover:text-purple-700 focus:text-purple-800 duration-300 transition ease-in-out text-sm"><%= moment(posts[i].createdAt).format('MMMM Do YYYY, h:mm:ss a') %></a>
               </div>
               <p>posted by: <%= posts[i].postBy%></p>
               <p class="text-gray-700 mb-6"><%= posts[i].description %></p>
