--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="h-screen">
     <!-- <header class="container">
       <div class="text-center">
         <h1 class=""><a href="/profile">PetBNB</a></h1>
