--- a/views/partials/insideHeader.ejs
+++ b/views/partials/insideHeader.ejs
@@ -28,13 +28,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="pb-2">
-    <!-- <header class="container">
-      <div class="text-center">
-        <h1 class=""><a href="/profile">PetBNB</a></h1>
-        <span>Your animal holiday destination and retreat locations</span>
-      </div>
-    </header> -->
+  <body class="pb-2 h-screen">
+    
     <nav class="navbar navbar-expand-lg shadow-md py-2 bg-white relative flex items-center w-full justify-between">
       <div class="px-6 w-full flex flex-wrap items-center justify-between">
         <div class="flex items-center">
