--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<% include('partials/insideHeader') %>
+<%- include('partials/insideHeader') -%>
 <div class="container m-auto">
   <div class="row mt-5">
       <div class="col-4">
@@ -73,4 +73,4 @@
     </div>
   </div>
 </div>
-<% include('partials/footer') %>
+<%- include('partials/footer') -%>
